# micro-ROS-Zephyr-Examples

./: .gitignore  README.md  requirements.txt
samples/: west.yml
samples/imu_msg/: CMakeLists.txt  Kconfig  prj.conf
samples/imu_msg/boards/: esp32c6_supermini_hpcore.overlay
samples/imu_msg/src/: accel_driver.c  accel_driver.h  main.c  microros_thread.c  microros_thread.h
samples/shell/: CMakeLists.txt  prj.conf
samples/shell/src/: main.c
